--- a/rpm/graphviz.yaml
+++ b/rpm/graphviz.yaml
@@ -130,10 +130,16 @@ SubPackages:
       Group: Development
       Requires:
         - '%{name}-libs = %{version}-%{release}'
+        - '%{name}-cpp = %{version}-%{release}'
       Files:
         - '%{_includedir}/*'
         - '%{_libdir}/*.so'
         - '%{_prefix}/%{_lib}/pkgconfig/*.pc'
+    - Name: cpp
+      Group:          Applications/Multimedia
+      Summary:        Python extension for %{name}
+      Files:
+        - '%{_libdir}/*++*.so.*'
     - Name: python
       Group:          Applications/Multimedia
       Summary:        Python extension for %{name}
@@ -148,18 +154,20 @@ SubPackages:
       Summary:        Core plugins for %{name}
       Files:
         - '%dir %{_libdir}/%{name}'
-        - '%{_libdir}/graphviz/libgvplugin_core.so.*'
-        - '%{_libdir}/graphviz/libgvplugin_dot_layout.so.*'
-        - '%{_libdir}/graphviz/libgvplugin_neato_layout.so.*'
+        - '%{_libdir}/%{name}/libgvplugin_core.so.*'
+        - '%{_libdir}/%{name}/libgvplugin_dot_layout.so.*'
+        - '%{_libdir}/%{name}/libgvplugin_neato_layout.so.*'
     - Name: plugins-misc
       Group:          Applications/Multimedia
       Summary:        Misc plugins for %{name}
       Files:
         - '%dir %{_libdir}/%{name}'
         - '%{_libdir}/%{name}/libgvplugin*.so.*'
-        - '%exclude %{_libdir}/graphviz/libgvplugin_core.so.*'
-        - '%exclude %{_libdir}/graphviz/libgvplugin_dot_layout.so.*'
-        - '%exclude %{_libdir}/graphviz/libgvplugin_neato_layout.so.*'
+        - '%{_libdir}/libgvplugin*.so.*'
+        # core plugins:
+        - '%exclude %{_libdir}/%{name}/libgvplugin_core.so.*'
+        - '%exclude %{_libdir}/%{name}/libgvplugin_dot_layout.so.*'
+        - '%exclude %{_libdir}/%{name}/libgvplugin_neato_layout.so.*'
     - Name: libs
       Group:          Applications/Multimedia
       Summary:        Libraries for %{name}
@@ -167,10 +175,10 @@ SubPackages:
         - '%{_libdir}/libcdt.so.*'
         - '%{_libdir}/libcgraph.so.*'
         - '%{_libdir}/libgvc.so.*'
-        - '%{_libdir}/libgvpr.so.*'
+        # '%{_libdir}/libgvpr.so.*'
         - '%{_libdir}/libpathplan.so.*'
         - '%{_libdir}/libxdot.so.4*'
-        - '%{_libdir}/liblab_gamut.so.*'
+        # '%{_libdir}/liblab_gamut.so.*'
         - '%exclude %{_libdir}/graphviz/*'
     - Name: graphs
       Group:          Applications/Multimedia
